--- a/css/custom.css
+++ b/css/custom.css
@@ -15,10 +15,21 @@ ul.nav {
 	background-color: skyblue;
 }
 
+#go-top {
+	position: absolute; 
+    bottom: 20px;
+    right: 20px;
+}
+
+#go-top a {
+	color: #333;
+}
+
 footer {
 	background-color: tomato;
 	padding-top: 150px;
 	padding-bottom: 30px;
+	position: relative;
 }
 
 .jumbotron {
@@ -36,6 +47,31 @@ footer {
 	margin-bottom: 30px;
 	font-weight: 100;
 	padding: 0 50px;
+}
+
+.modal-content iframe {
+	margin-top: 20px;
+}
+
+.modal-content button.close {
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	font-size: 28px;
+	background-color: white;
+	opacity: 1;
+	width: 30px;
+	border-radius: 24px;
+	-webkit-border-radius: 24px;
+	-moz-border-radius: 24px;
+}
+
+.modal-dialog {
+    position: absolute;
+    left: 50%;
+    margin-left: -300px;
+    top: 50%;
+    margin-top: -171px;
 }
 
 .btn-lg {
@@ -75,6 +111,10 @@ footer {
 	color: #e74c3d;
 	text-decoration: none;
 	opacity: .9;
+}
+
+.fa-chevron-circle-up {
+	color: #333;
 }
 
 /*Responsive Styling*/
