--- a/css/custom.css
+++ b/css/custom.css
@@ -4,11 +4,11 @@ body {
 }
 
 ul.nav, .jumbotron h1 {
-	font-family: 'Arvo', courier, serif;
+	font-family: 'Josefin Sans', sans-serif;
 }
 
 ul.nav {
-	font-size: 13px;
+	font-size: 18px;
 }
 
 #get-Involved {
@@ -27,26 +27,43 @@ ul.nav {
 
 footer {
 	background-color: tomato;
-	padding-top: 150px;
+	padding-top: 40px;
 	padding-bottom: 30px;
 	position: relative;
 }
 
 .jumbotron {
+	margin-top: -50px;
 	text-align: center;
-	background-image: url('../images/hero_image.jpg');
-	color: white;
+	margin-bottom: 10px;
+	background-image: url('../images/mac-glasses.jpg');
+	//color: white;
 }
 
 .jumbotron h1 {
-	margin-top: 0px;
-	margin-bottom: 50px;
+	margin-top: 50px;
+	margin-bottom: 450px;
+}
+
+.jumbotron h2 {
+	font-family: 'Josefin Sans', sans-serif;
+	margin-top: 100px;
+	color: white;
 }
 
 .jumbotron p {
-	margin-bottom: 30px;
-	font-weight: 100;
-	padding: 0 50px;
+	font-family: 'Josefin Sans', sans-serif;
+	font-weight: lighter;
+	color: white;
+	margin-bottom: 0;
+}
+
+.jumbotron p.name {
+	color: white;
+}
+
+.jumbotron a.btn {
+	margin-top: 20px;
 }
 
 .modal-content iframe {
@@ -75,7 +92,7 @@ footer {
 }
 
 .btn-lg {
-	font-size: 36px;
+	font-size: 25px;	
 }
 .homepage {
 	text-align: center;
@@ -85,17 +102,18 @@ footer {
 
 .homepage h2, h3{
 	color: #e74c3c;
-	font-family: 'Arvo', courier, serif;
-	text-transform: uppercase;
+	font-family: 'Josefin Sans', sans-serif;
+	font-weight: bold;
+	--text-transform: uppercase;
 }
 
 .homepage h3 {
-	font-style: 26px;
+	font-size: 26px;
 }
 
 .homepage p {
 	font-size: 21px;
-	font-weight: 300;
+	font-weight: 200;
 }
 
 .homepage hr {
@@ -173,7 +191,7 @@ footer {
 		font-size: 18px;
 	}
 
-	footer img {
+	--footer img {
 		width: 80%;
 	}
 }
